--- a/src/Pages/Home/Feature/style.css
+++ b/src/Pages/Home/Feature/style.css
@@ -26,8 +26,50 @@
 
 .courses:last-of-type {
     flex-basis: 200px;
-  }
-  
-  .courses:hover {
+}
+
+.courses:hover {
     background-color: #3EE8B5;
-  }
+}
+
+.feature-slide-parent-container {
+    display: flex;
+    overflow-x: scroll;
+    gap: 20px;
+    margin-top: 32px;
+    padding-bottom: 20px;
+}
+
+.feature-slide-parent-container::-webkit-scrollbar {
+    /* display: none; */
+    /* Chrome, Safari, and Opera */
+    width: 8px;
+    height: 8px;
+}
+
+/* scrollbar thumb */
+.feature-slide-parent-container::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 4px;
+}
+
+/* scrollbar track */
+.feature-slide-parent-container::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+}
+
+/* scrollbar corner */
+.feature-slide-parent-container::-webkit-scrollbar-corner {
+    background-color: #f0f0f0;
+}
+
+.feature-course {
+    flex-shrink: 0;
+    flex-basis: 85vw;
+    max-width: 310px;
+    height: 100%;
+    min-height: 550px;
+    max-height: 550px;
+    cursor: pointer;
+    transition: all ease-in-out 0.5s;
+}
