--- a/src/Pages/Home/Feature/style.css
+++ b/src/Pages/Home/Feature/style.css
@@ -65,11 +65,11 @@
 
 .feature-course {
     flex-shrink: 0;
-    flex-basis: 85vw;
-    max-width: 310px;
+    flex-basis: 350px;
+    max-width: 350px;
     height: 100%;
-    min-height: 550px;
-    max-height: 550px;
+    min-height: 500px;
+    max-height: 500px;
     cursor: pointer;
     transition: all ease-in-out 0.5s;
 }
