science page navbar

--- a/src/Pages/SciencePage/ScienceSecondNav/style.css
+++ b/src/Pages/SciencePage/ScienceSecondNav/style.css
@@ -5,6 +5,6 @@
     font-family: 'Inter', sans-serif;
 }
 
-.eu-container::-webkit-scrollbar{
+.hidden-scroll::-webkit-scrollbar{
     display: none;
 }
