--- a/src/Pages/Home/Feature/style.css
+++ b/src/Pages/Home/Feature/style.css
@@ -1,14 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
-
-.font{
-    font-family: 'Inter', sans-serif;
-}
-
 .parent-container {
     display: flex;
     overflow-x: scroll;
-    gap: 10px;
+    gap: 20px;
     margin-top: 32px;
 }
 
@@ -19,13 +12,13 @@
 
 
 .courses {
-    border: 2px solid gray;
+    border: 2px solid #94A4FF;
     flex-shrink: 0;
-    flex-basis: 84px;
+    min-width: 100px;
     height: fit-content;
     text-align: center;
     font-size: 20px;
-    padding: 0.5rem 1rem;
+    padding: 6px 1rem;
     border-radius: 50px;
     cursor: pointer;
     transition: all ease-in-out 0.5s;
@@ -36,7 +29,7 @@
 }
 
 .courses:hover {
-    background-color: #397FEB;
+    background-color: #94A4FF;
     color: white;
 }
 
