--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Barlow+Condensed&family=Bebas+Neue&family=Caveat&family=Courgette&family=Dancing+Script&family=Exo+2&family=Fjalla+One&family=Grape+Nuts&family=Great+Vibes&family=Indie+Flower&family=Inter&family=Kanit&family=Lobster&family=Lobster+Two&family=Lora&family=Macondo&family=Meie+Script&family=Montserrat&family=Noto+Sans&family=Nunito&family=Open+Sans&family=Oswald&family=Oxygen&family=PT+Serif&family=Playfair+Display&family=Poppins&family=Quicksand&family=Raleway&family=Roboto&family=Roboto+Condensed&family=Rubik&family=Satisfy&family=Sevillana&family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 .App {
   text-align: center;
